# zp5

./: .gitignore  CMakeLists.txt  build.cmd  build.xml
AssetCompiler/: CMakeLists.txt
AssetCompiler/include/: acApplication.h  acAssetCompiler.h  acCommandLineProcessor.h  acMain.h  acTextureCompiler.h
AssetCompiler/src/: acApplication.cpp  acCommandLineProcessor.cpp  acMain.cpp
Blackjack/: CMakeLists.txt
Blackjack/Assets/: UnlitColor.shader  cp437_12x12.tga  cp437_12x12a.tga
Blackjack/src/: bMain.cpp
ZeroPoint5/: CMakeLists.txt
ZeroPoint5/Core/: zpAllocator.h  zpBlockAllocator.cpp  zpBlockAllocator.h  zpConfig.h  zpConfig.h.in  zpCore.cpp  zpCore.h  zpCore.inl  zpDataBuffer.cpp  zpDataBuffer.h  zpFile.cpp  zpFile.h  zpMath.cpp  zpMath.h  zpMathSimd.inl  zpProfiler.cpp  zpProfiler.h  zpStackAllocator.h  zpStackAllocator.inl  zpString.cpp  zpTime.cpp  zpTime.h  zpVector.inl
ZeroPoint5/Engine/: zpAllComponents.h  zpBaseApplication.cpp  zpBaseApplication.h  zpComponent.h  zpDebug.cpp  zpDebug.h  zpEngine.h  zpInput.cpp  zpInput.h  zpMain.cpp  zpMain.h  zpMeshRendererComponent.cpp  zpMeshRendererComponent.h  zpObject.cpp  zpObject.h  zpObjectManager.cpp  zpObjectManager.h  zpParticleEmitterComponent.cpp  zpParticleEmitterComponent.h  zpProfiler.cpp  zpProfiler.h  zpScene.cpp  zpScene.h  zpTransformComponent.cpp  zpTransformComponent.h
ZeroPoint5/Rendering/: zpCamera.cpp  zpCamera.h  zpFont.cpp  zpFont.h  zpMaterial.cpp  zpMaterial.h  zpMaterialManager.cpp  zpMaterialManager.h  zpMesh.cpp  zpMesh.h  zpRendering.h  zpRenderingContext.cpp  zpRenderingContext.h  zpRenderingEngine.cpp  zpRenderingEngine.h  zpShader.cpp  zpShader.h  zpShaderManager.cpp  zpShaderManager.h  zpTexture.cpp  zpTexture.h  zpTextureManager.cpp  zpTextureManager.h
ZeroPoint5/RenderingOpenGL/: zpRenderingEngineOpenGL.cpp  zpRenderingEngineOpenGL.h  zpRenderingOpenGL.cpp  zpRenderingOpenGL.h
ZeroPoint5/include/Core/: zpArchive.h  zpAtomic.h  zpBlockAllocator.h  zpConfig.h  zpConfig.h.in  zpCore.h  zpCore.inl  zpDataBuffer.h  zpFile.h  zpHashSet.h  zpHashSet.inl  zpJob.h  zpLZF.h  zpMap.h  zpMap.inl  zpMath.h  zpMathSimd.inl  zpMemoryAllocator.h  zpMemoryPolicy.h  zpMemoryStorage.h  zpPoolAllocator.h  zpProfiler.h  zpQueue.h  zpQueue.inl  zpStack.h  zpStack.inl  zpStackTrace.h  zpString.h  zpTLSF.h  zpThread.h  zpTime.h  zpVector.h  zpVector.inl
ZeroPoint5/include/Engine/: zpBaseApplication.h  zpComponent.h  zpComponent.inl  zpDebug.h  zpEngine.h  zpEntity.h  zpHandle.h  zpInput.h  zpMeshRendererComponent.h  zpObjectManager.h  zpParticleEmitterComponent.h  zpRectTransformComponent.h  zpScene.h  zpTransformComponent.h
ZeroPoint5/include/Rendering/: zpCamera.h  zpMaterial.h  zpMesh.h  zpRenderCommandBuffer.h  zpRenderContext.h  zpRenderImmediate.h  zpRenderPipeline.h  zpRenderResource.h  zpRenderTarget.h  zpRendering.h  zpRenderingContext.h  zpRenderingEngine.h  zpShader.h  zpTexture.h
ZeroPoint5/include/RenderingOpenGL/: zpRenderingOpenGL.h
ZeroPoint5/src/Core/: zpAtomic.cpp  zpBlockAllocator.cpp  zpCore.cpp  zpDataBuffer.cpp  zpFile.cpp  zpJob.cpp  zpLZF.cpp  zpMath.cpp  zpMemoryPolicy.cpp  zpMemoryStorage.cpp  zpPoolAllocator.cpp  zpProfiler.cpp  zpStackTrace.cpp  zpString.cpp  zpTLSF.cpp  zpThread.cpp  zpTime.cpp
ZeroPoint5/src/Engine/: zpBaseApplication.cpp  zpDebug.cpp  zpInput.cpp  zpMain.cpp  zpMeshRendererComponent.cpp  zpObject.cpp  zpObjectManager.cpp  zpParticleEmitterComponent.cpp  zpRectTransformComponent.cpp  zpScene.cpp  zpTransformComponent.cpp
ZeroPoint5/src/Rendering/: zpCamera.cpp  zpFont.cpp  zpMaterial.cpp  zpMesh.cpp  zpRenderCommandBuffer.cpp  zpRenderContext.cpp  zpRenderImmediate.cpp  zpRenderPipeline.cpp  zpRenderResource.cpp  zpRendering.cpp  zpRenderingContext.cpp  zpRenderingEngine.cpp  zpShader.cpp  zpTexture.cpp
ZeroPoint5/src/RenderingOpenGL/: zpRenderingOpenGL.cpp
